--- a/myblog/myblog/blog/templates/base.html
+++ b/myblog/myblog/blog/templates/base.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,28 +8,28 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- Bootstrap styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-   
+    <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
+
     <!-- Font-Awesome -->
-    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'blog/css/font-awesome/css/font-awesome.min.css' %} ">
 
     <!-- Google Webfonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|PT+Serif:400,400italic' rel='stylesheet' type='text/css'>
+    #<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|PT+Serif:400,400italic' rel='stylesheet' type='text/css'>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css" id="theme-styles">
+    <link rel="stylesheet" href="{% static 'blog/css/style.css' %}" id="theme-styles">
 
-    <!--[if lt IE 9]>      
+    <!--[if lt IE 9]>
         <script src="js/vendor/google/html5-3.6-respond-1.1.0.min.js"></script>
     <![endif]-->
-    
+
 </head>
 <body>
     <header>
         <div class="widewrapper masthead">
             <div class="container">
                 <a href="index.html" id="logo">
-                    <img src="img/logo.png" alt="clean Blog">
+                    <img src="{% static 'blog/img/logo.png' %}" alt="clean Blog">
                 </a>
 
                 <div id="mobile-nav-toggle" class="pull-right">
@@ -40,19 +41,18 @@
                 <nav class="pull-right clean-nav">
                     <div class="collapse navbar-collapse">
                         <ul class="nav nav-pills navbar-nav">
-                          
                             <li>
-                                <a href="index.html">Home</a>
+                                <a href="{% url 'blog:index' %}">Home</a>
                             </li>
                             <li>
-                                <a href="about.html">About</a>
+                                <a href="{% url 'blog:about' %}">About</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact</a>
-                            </li>                        
+                                <a href="{% url 'blog:contact' %}">Contact</a>
+                            </li>
                         </ul>
                     </div>
-                </nav>        
+                </nav>
 
             </div>
         </div>
@@ -60,7 +60,8 @@
         <div class="widewrapper subheader">
             <div class="container">
                 <div class="clean-breadcrumb">
-                    <a href="#">Blog</a>
+                    {% block subheader %}
+                    {% endblock subheader %}
                 </div>
 
                 <div class="clean-searchbox">
@@ -74,89 +75,13 @@
             </div>
         </div>
     </header>
-
     <div class="widewrapper main">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 blog-main">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <article class=" blog-teaser">
-                                <header>
-                                    <img src="img/1.jpg" alt="">
-                                    <h3><a href="single.html">How to Create Template</a></h3>
-                                    <span class="meta">19 August 2015, John Doe</span>
-                                    <hr>
-                                </header>
-                                <div class="body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sit. Doloribus dolores neque eos. Velit eveniet, necessitatibus aut sit tenetur perferendis! Commodi pariatur dignissimos, quis sequi odit iusto cumque quod!
-                                </div>
-                                <div class="clearfix">
-                                    <a href="single.html" class="btn btn-clean-one">Read more</a>
-                                </div>
-                            </article>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <article class="blog-teaser">
-                                <header>
-                                    <img src="img/2.jpg" alt="">
-                                    <h3><a href="single.html">Clean Personal Blog Template</a></h3>
-                                    <span class="meta">19 August 2015, John Doe</span>
-                                    <hr>
-                                </header>
-                                <div class="body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sit. Doloribus dolores neque eos. Velit eveniet, necessitatibus aut sit tenetur perferendis! Commodi pariatur dignissimos, quis sequi odit iusto cumque quod!
-                                </div>
-                                <div class="clearfix">
-                                    <a href="single.html" class="btn btn-clean-one">Read more</a>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                    
-                    <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >手机网站模板</a></div>
-
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <article class="blog-teaser">
-                                <header>
-                                    <img src="img/3.jpg" alt="">
-                                    <h3><a href="single.html">Blackor - Responsive HTML5 Theme</a></h3>
-                                    <span class="meta">19 August 2015, John Doe</span>
-                                    <hr>
-                                </header>
-                                <div class="body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sit. Doloribus dolores neque eos. Velit eveniet, necessitatibus aut sit tenetur perferendis! Commodi pariatur dignissimos, quis sequi odit iusto cumque quod!
-                                </div>
-                                <div class="clearfix">
-                                    <a href="single.html" class="btn btn-clean-one">Read more</a>
-                                </div>
-                            </article>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <article class="blog-teaser">
-                                <header>
-                                    <img src="img/4.jpg" alt="">
-                                   <h3><a href="single.html">Yellow - HTML5 Template</a></h3>
-                                    <span class="meta">19 August 2015, John Doe</span>
-                                    <hr>
-                                </header>
-                                <div class="body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sit. Doloribus dolores neque eos. Velit eveniet, necessitatibus aut sit tenetur perferendis! Commodi pariatur dignissimos, quis sequi odit iusto cumque quod!
-                                </div>
-                                <div class="clearfix">
-                                    <a href="single.html" class="btn btn-clean-one">Read more</a>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-
-                    <div class="paging">
-                        <a href="#" class="older">Older Post</i></a>
-                    </div>
-                </div>
+                {% block content %}
+                {% endblock content %}
                 <aside class="col-md-4 blog-aside">
-                    
+
                     <div class="aside-widget">
                         <header>
                             <h3>Featured Post</h3>
@@ -172,7 +97,7 @@
                             </ul>
                         </div>
                     </div>
-                
+
                     <div class="aside-widget">
                         <header>
                             <h3>Related Post</h3>
@@ -202,7 +127,7 @@
                                 <li><a href="#">PLUGIN</a></li>
                                 <li><a href="#">BOOTSTRAP</a></li>
                                 <li><a href="#">TUTORIAL</a></li>
-                                <li><a href="#">UI/UX</a></li>                            
+                                <li><a href="#">UI/UX</a></li>
                             </ul>
                         </div>
                     </div>
@@ -243,7 +168,7 @@
                             <i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google"></i>
                         </div>
                     </div>
-                   
+
                 </div>
             </div>
         </div>
@@ -251,10 +176,10 @@
                 Copyright 2015 More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
         </div>
     </footer>
-    
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/modernizr.js"></script>
+
+    <script src="{% static 'blog/js/jquery.min.js' %}"></script>
+    <script src="{% static 'blog/js/bootstrap.min.js' %} "></script>
+    <script src="{% static 'blog/js/modernizr.js' %}"></script>
 
 </body>
 </html>
