--- a/myblog/myblog/blog/templates/base.html
+++ b/myblog/myblog/blog/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load blog_tags %}
 
 <html lang="en">
 <head>
@@ -84,50 +85,70 @@
 
                     <div class="aside-widget">
                         <header>
-                            <h3>Featured Post</h3>
+                            <h3>最新文章</h3>
                         </header>
                         <div class="body">
                             <ul class="clean-list">
-                                <li><a href="">Clean - Responsive HTML5 Template</a></li>
-                                <li><a href="">Responsive Pricing Table</a></li>
-                                <li><a href="">Yellow HTML5 Template</a></li>
-                                <li><a href="">Blackor Responsive Theme</a></li>
-                                <li><a href="">Portfolio Bootstrap Template</a></li>
-                                <li><a href="">Clean Slider Template</a></li>
+                                {% get_recent_post_list as rencent_post %}
+                                {% for post in rencent_post %}
+                                <li><a href="{{ post.get_absolute_url }}">{{ post.title }} <span class="post-count">({{ post.view }})</span></a></li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
 
                     <div class="aside-widget">
                         <header>
-                            <h3>Related Post</h3>
+                            <h3>文章点击数</h3>
                         </header>
                         <div class="body">
                             <ul class="clean-list">
-                                <li><a href="">Blackor Responsive Theme</a></li>
-                                <li><a href="">Portfolio Bootstrap Template</a></li>
-                                <li><a href="">Clean Slider Template</a></li>
-                                <li><a href="">Clean - Responsive HTML5 Template</a></li>
-                                <li><a href="">Responsive Pricing Table</a></li>
-                                <li><a href="">Yellow HTML5 Template</a></li>
+                                {% get_most_viewd_posts as view_list %}
+                                {% for post in view_list %}
+                                <li><a href="{{ post.get_absolute_url }}">{{ post.title }} <span class="post-count">({{ post.view }})</span></a></li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
 
                     <div class="aside-widget">
                         <header>
-                            <h3>Tags</h3>
+                            <h3>文章归档</h3>
+                        </header>
+                        <div class="body">
+                            <ul class="clean-list">
+                                {% get_post_date_monthly as date_monthly %}
+                                {% for date in date_monthly %}
+                                <li><a href="{% url 'blog:archives' date.0 date.1 %}">{{ date.0 }}年 {{ date.1 }}月 <span class="post-count">({{ date.2 }})</span></a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="aside-widget">
+                        <header>
+                            <h3>文章分类</h3>
+                        </header>
+                        <div class="body">
+                            <ul class="clean-list">
+                                {% get_categories as categories %}
+                                {% for category in categories %}
+                                <li><a href="">{{ category.name }} <span class="post-count">({{ category.post_num }})</span></a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="aside-widget">
+                        <header>
+                            <h3>文章标签</h3>
                         </header>
                         <div class="body clearfix">
                             <ul class="tags">
-                                <li><a href="#">HTML5</a></li>
-                                <li><a href="#">CSS3</a></li>
-                                <li><a href="#">COMPONENTS</a></li>
-                                <li><a href="#">TEMPLATE</a></li>
-                                <li><a href="#">PLUGIN</a></li>
-                                <li><a href="#">BOOTSTRAP</a></li>
-                                <li><a href="#">TUTORIAL</a></li>
-                                <li><a href="#">UI/UX</a></li>
+                                {% get_tags as tags %}
+                                {% for tag in tags %}
+                                <li><a href="">{{ tag.name }} <span class="post-count">({{ tag.post_num }})</span></a></li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
