--- a/myblog/myblog/blog/templates/base.html
+++ b/myblog/myblog/blog/templates/base.html
@@ -8,17 +8,18 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <!-- Bootstrap styles -->
-    <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
 
     <!-- Font-Awesome -->
     <link rel="stylesheet" href="{% static 'blog/css/font-awesome/css/font-awesome.min.css' %} ">
 
     <!-- Google Webfonts -->
-    #<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|PT+Serif:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|PT+Serif:400,400italic' rel='stylesheet' type='text/css'>
 
     <!-- Styles -->
     <link rel="stylesheet" href="{% static 'blog/css/style.css' %}" id="theme-styles">
+
+    <!-- Bootstrap styles -->
+    <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
 
     <!--[if lt IE 9]>
         <script src="js/vendor/google/html5-3.6-respond-1.1.0.min.js"></script>
@@ -29,7 +30,7 @@
     <header>
         <div class="widewrapper masthead">
             <div class="container">
-                <a href="index.html" id="logo">
+                <a href="{% url 'blog:index' %}" id="logo">
                     <img src="{% static 'blog/img/logo.png' %}" alt="clean Blog">
                 </a>
 
@@ -83,17 +84,13 @@
                 {% endblock content %}
                 <aside class="col-md-4 blog-aside">
 
-                    <div class="aside-widget">
-                        <header>
-                            <h3>最新文章</h3>
-                        </header>
-                        <div class="body">
-                            <ul class="clean-list">
-                                {% get_recent_post_list as rencent_post %}
-                                {% for post in rencent_post %}
-                                <li><a href="{{ post.get_absolute_url }}">{{ post.title }} <span class="post-count">({{ post.view }})</span></a></li>
-                                {% endfor %}
-                            </ul>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">最新文章</div>
+                        <div class="list-group">
+                            {% get_recent_post_list as rencent_post %}
+                            {% for post in rencent_post %}
+                            <a href="{{ post.get_absolute_url }}" class="list-group-item"><span class="badge">{{ post.view }}</span>{{ post.title }}</a>
+                            {% endfor %}
                         </div>
                     </div>
 
@@ -102,10 +99,10 @@
                             <h3>文章点击数</h3>
                         </header>
                         <div class="body">
-                            <ul class="clean-list">
+                            <ul class="list-group">
                                 {% get_most_viewd_posts as view_list %}
                                 {% for post in view_list %}
-                                <li><a href="{{ post.get_absolute_url }}">{{ post.title }} <span class="post-count">({{ post.view }})</span></a></li>
+                                <li class="list-group-item"><span class="badge">{{ post.view }}</span><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -116,10 +113,10 @@
                             <h3>文章归档</h3>
                         </header>
                         <div class="body">
-                            <ul class="clean-list">
+                            <ul class="list-group">
                                 {% get_post_date_monthly as date_monthly %}
                                 {% for date in date_monthly %}
-                                <li><a href="{% url 'blog:archives' date.0 date.1 %}">{{ date.0 }}年 {{ date.1 }}月 <span class="post-count">({{ date.2 }})</span></a></li>
+                                <li class="list-group-item"><span class="badge">{{ date.2 }}</span><a href="{% url 'blog:archives' date.0 date.1 %}">{{ date.0 }}年 {{ date.1 }}月</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -130,24 +127,24 @@
                             <h3>文章分类</h3>
                         </header>
                         <div class="body">
-                            <ul class="clean-list">
+                            <ul class="list-group">
                                 {% get_categories as categories %}
                                 {% for category in categories %}
-                                <li><a href="">{{ category.name }} <span class="post-count">({{ category.post_num }})</span></a></li>
+                                <li class="list-group-item"><span class="badge">{{ category.post_num }}</span><a href="{% url 'blog:category' category.pk %}">{{ category.name }}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
                     </div>
 
-                    <div class="aside-widget">
+                    <div class="">
                         <header>
                             <h3>文章标签</h3>
                         </header>
-                        <div class="body clearfix">
-                            <ul class="tags">
+                        <div class=" ">
+                            <ul class="list-group">
                                 {% get_tags as tags %}
                                 {% for tag in tags %}
-                                <li><a href="">{{ tag.name }} <span class="post-count">({{ tag.post_num }})</span></a></li>
+                                <li class="list-group-item"><span class="badge">{{ tag.post_num }}</span><a href="{% url 'blog:tag' tag.pk %}" class="label label-info" >{{ tag.name }}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
