--- a/myblog/myblog/blog/templates/blog/index.html
+++ b/myblog/myblog/blog/templates/blog/index.html
@@ -14,7 +14,7 @@
             <div class="col-md-6 col-sm-6">
                 <article class=" blog-teaser">
                     <header>
-                        <img src="{% static 'blog/img/1.jpg' %}" alt="picture">
+                        <img class="img-responsive" src="{% static 'blog/img/1.jpg' %}" alt="picture">
                         <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
                         <span class="meta">{{ post.created_time }}, {{ post.author }}</span>
                         <hr>
