完成评论与分页功能

--- a/myblog/myblog/blog/templates/base.html
+++ b/myblog/myblog/blog/templates/base.html
@@ -87,7 +87,7 @@
                         <div class="panel panel-info">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapseOne">最新文章</a>
+                                    <a id="new-article" data-toggle="collapse" href="#collapseOne">最新文章</a>
                                 </h4>
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
