--- a/myblog/myblog/blog/templates/blog/index.html
+++ b/myblog/myblog/blog/templates/blog/index.html
@@ -29,19 +29,50 @@
             </div>
         {% endfor %}
         </div>
+
+        {% if is_paginated %}
         <div class="paging" style="margin:0 auto;text-align:center">
             <ul class="pagination">
-                <li><a href="#">&laquo;</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&raquo;</a></li>
+                <li><a href="?page=1"><<</a></li>
+                {% if page_obj.has_previous %}
+                <li><a href="?page={{ page_obj.previous_page_number }}"><</a></li>
+                {% else %}
+                <li><a href=""><</a></li>
+                {% endif %}
+                {% if first %}
+                <li><a href="?page=1">1</a></li>
+                {% endif %}
+                {% if left %}
+                    {% if left_has_more %}
+                    <li><a>...</a></li>
+                    {% endif %}
+                    {% for i in left %}
+                        <li><a href="?page={{i}}">{{i}}</a></li>
+                    {% endfor %}
+                {% endif %}
+                <li class="active"><a href="?page={{ page_obj.number }}">{{page_obj.number}}</a></li>
+                {% if right %}
+                    {% for i in right %}
+                        <li><a href="?page={{i}}">{{i}}</a></li>
+                    {% endfor %}
+                    {% if right_has_more %}
+                    <li><a>...</a></li>
+                    {% endif %}
+                {% endif %}
+                {% if last %}
+                <li><a href="?page={{paginator.num_pages}}">{{paginator.num_pages}}</a></li>
+                {% endif %}
+                {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}">></a></li>
+                {% else %}
+                <li><a href="">></a></li>
+                {% endif %}
+                <li><a href="?page={{paginator.num_pages}}">>></a></li>
             </ul>
         </div>
+        {% endif %}
     {% else %}
-        <P class="text-center">No Post yet!</P>
+        <P class="text-center">暂无文章!</P>
     {% endif %}
 
 </div>
