--- a/myblog/myblog/blog/templates/blog/single.html
+++ b/myblog/myblog/blog/templates/blog/single.html
@@ -22,7 +22,8 @@
         <div class="body">
             <h1>{{ post.title }}</h1>
             <div class="meta">
-                <i class="fa fa-user"></i> {{ post.author }} 阅读{{ post.view }} <i class="fa fa-comments"></i><span class="data"><a href="#comments">3 Comments</a></span>
+                <i class="fa fa-user"></i> {{ post.author }} {{ post.view }}阅读
+                <i class="fa fa-comments"></i><a href="#comments">{{ post.comment_set.count }} 评论</a>
                 <br>
                 <i class="fa fa-calendar"></i>创建时间：{{ post.created_time }}<i class="fa fa-calendar"></i>修改时间：{{ post.modified_time }}
             </div>
@@ -33,128 +34,61 @@
         <div class="row">
             <div class="col-md-4">
                 {% for tag in post.tags.all %}
-                <p>{{ tag.name }}</p>
+                <a href="{% url 'blog:tag' tag.pk %}" class="label label-info">{{ tag.name }}</a>
                 {% endfor %}
             </div>
 
             <div class="col-md-4">
-            <aside class="social-icons clearfix">
-            <h3>Share on </h3>
-            <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-google"></i></a>
-            </aside>
+                <h3>Share on </h3>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-google"></i></a>
             </div>
         </div>
 
-        <aside class="comments" id="comments">
         <hr>
 
-        <h2><i class="fa fa-comments"></i> 6 Comments</h2>
 
-        <article class="comment">
-            <header class="clearfix">
-                <img src="img/avatar.png" alt="A Smart Guy" class="avatar">
-                <div class="meta">
-                    <h3><a href="#">John Doe</a></h3>
-                    <span class="date">
-                        24 August 2015
-                    </span>
-                    <span class="separator">
-                        -
-                    </span>
+        <ul id="comments" class="">
+            <h2><i class="fa fa-comments"></i> {{ post.comment_set.count }} Comments</h2>
+            {% if comment_list %}
+                {% for comment in comment_list %}
+                <li class="">
+                    <span class="">{{ comment.name }}</span>
+                    <time class="">{{ comment.created_time }}</time>
+                    <div class="">{{ comment.text }}</div>
+                </li>
+                {% endfor %}
+            {% else %}
+                <p>暂无评论</p>
+            {% endif %}
+        </ul>
 
-                    <a href="#create-comment" class="reply-link">Reply</a>
-                </div>
-            </header>
-             <div class="body">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sit perspiciatis debitis, vel ducimus praesentium expedita, assumenda ipsum cum corrupti dolorum modi. Rem ipsam similique sapiente obcaecati tenetur beatae voluptatibus.
-            </div>
-        </article>
-
-        <article class="comment reply">
-            <header class="clearfix">
-                <img src="img/avatar.png" alt="A Smart Guy" class="avatar">
-                <div class="meta">
-                    <h3><a href="#">John Doe</a></h3>
-                    <span class="date">
-                        24 August 2015
-                    </span>
-                    <span class="separator">
-                        -
-                    </span>
-
-                    <a href="#create-comment" class="reply-link">Reply</a>
-                </div>
-            </header>
-             <div class="body">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sit perspiciatis debitis, vel ducimus praesentium expedita, assumenda ipsum cum corrupti dolorum modi. Rem ipsam similique sapiente obcaecati tenetur beatae voluptatibus.
-            </div>
-        </article>
-
-        <article class="comment ">
-            <header class="clearfix">
-                <img src="img/avatar.png" alt="A Smart Guy" class="avatar">
-                <div class="meta">
-                    <h3><a href="#">John Doe</a></h3>
-                    <span class="date">
-                        24 August 2015
-                    </span>
-                    <span class="separator">
-                        -
-                    </span>
-
-                    <a href="#create-comment" class="reply-link">Reply</a>
-                </div>
-            </header>
-             <div class="body">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sit perspiciatis debitis, vel ducimus praesentium expedita, assumenda ipsum cum corrupti dolorum modi. Rem ipsam similique sapiente obcaecati tenetur beatae voluptatibus.
-            </div>
-        </article>
-
-        <article class="comment">
-            <header class="clearfix">
-                <img src="img/avatar.png" alt="A Smart Guy" class="avatar">
-                <div class="meta">
-                    <h3><a href="#">John Doe</a></h3>
-                    <span class="date">
-                        24 August 2015
-                    </span>
-                    <span class="separator">
-                        -
-                    </span>
-
-                    <a href="#create-comment" class="reply-link">Reply</a>
-                </div>
-            </header>
-             <div class="body">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sit perspiciatis debitis, vel ducimus praesentium expedita, assumenda ipsum cum corrupti dolorum modi. Rem ipsam similique sapiente obcaecati tenetur beatae voluptatibus.
-            </div>
-        </article>
-        </aside>
-
-        <aside class="create-comment" id="create-comment">
         <hr>
 
-        <h2><i class="fa fa-pencil"></i> Add Comment</h2>
+        <h2><i class="fa fa-pencil"></i>提交评论</h2>
 
-        <form action="#" method="get" accept-charset="utf-8">
+        <form action="{% url 'comments:post_comment' post.pk %}" method="post" accept-charset="utf-8">
+            {% csrf_token %}
             <div class="row">
-                <div class="col-md-6">
-                    <input type="text" name="name" id="comment-name" placeholder="Your Name" class="form-control input-lg">
+                <div class="col-md-4">
+                    <label for="{{form.name.id_for.label}}">名字:</label>
+                    {{ form.name }}
+                    {{ form.name.errors }}
                 </div>
-                <div class="col-md-6">
-                    <input type="email" name="email" id="comment-email" placeholder="Email" class="form-control input-lg">
+                <div class="col-md-4">
+                    <label for="{{form.email.id_for.label}}">邮箱:</label>
+                    {{ form.email }}
+                    {{ form.email.errors }}
                 </div>
-            </div>
-
-            <input type="url" name="name" id="comment-url" placeholder="Website" class="form-control input-lg">
-
-            <textarea rows="10" name="message" id="comment-body" placeholder="Your Message" class="form-control input-lg"></textarea>
-
-            <div class="buttons clearfix">
-                <button type="submit" class="btn btn-xlarge btn-clean-one">Submit</button>
+                <div class="col-md-12">
+                    <label for="{{form.text.id_for.label}}">评论:</label>
+                    {{ form.text }}
+                    {{ form.text.errors }}
+                    <button type="submit" class="btn btn-primary">发表</button>
+                </div>
             </div>
         </form>
-        </aside>
     </div>
 {% endblock content %}
 
